--- a/starter/index.html
+++ b/starter/index.html
@@ -12,6 +12,8 @@
     <body>
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
+            <div class="set-winning-score-label">Set winning score</div>
+            <input type="text" id="set-score" class='set-winning-score'>
                 <div class="player-name" id="name-0">Player 1</div>
                 <div class="player-score" id="score-0">43</div>
                 <div class="player-current-box">
@@ -34,6 +36,7 @@
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
             <img src="dice-5.png" alt="Dice" class="dice">
+            <img src="dice-5.png" alt="Dice" class="dice2">
         </div>
 
         <script src="app.js"></script>
